Changelog for Poi
=================


2.0.3 (unreleased)
------------------

- Allow assigning portlets to trackers and issues.
  Fixes http://plone.org/products/poi/issues/250
  [maurits]

- Make sure the issue-info-box does not inherit a 100% width, as is the
  case on plone.org at the moment (6 September 2011), which is far too
  wide for this little box.
  See http://plone.org/products/poi/issues/249
  [Maurits]

- Added MANIFEST.in file so that .mo translation files will be
  included in source distributions (with help from zest.releaser and
  zest.pocompile).
  Refs http://plone.org/products/poi/issues/248
  [maurits]


2.0.2 (2011-04-09)
------------------

- Depend on Products.CMFPlone instead of Plone to improve Plone 4.1
  compatibility.
  [maurits]

- Do not fail when rendering a response that has a text/x-html-safe
  mimetype or where the html transform returns nothing.  (Merged from
  1.2 branch.)
  [maurits]

- Review French translations
  [toutpt]


2.0.1 (2010-11-11)
------------------

- Split profile registration and upgrade steps from configure.zcml
  into a new profiles.zcml as it is quite big already.
  [maurits]

- Fix: for the 'no change' label and input the ids were empty.
  [thomasdesvenain]

- Removed our dependency on collective.autopermission, as its
  functionality is integrated in Zope 2.12 (Plone 4.0).
  [maurits]


2.0 (2010-10-14)
----------------

- Lower the minimum dependency on Products.AddRemoveWidget to 1.4.2
  again, as I had a report about a performance hit in 1.4.3 in corner
  cases not related to Poi itself; and 1.4.2 is fine really, though
  1.4.4 has a fix for Plone 4 in a part that Poi does not use.
  [maurits]

- Do not advise users to click on 'search for issues' as that link is
  nowhere; instead it should be 'Advanced issue search'.
  [maurits]


2.0b2 (2010-09-14)
------------------

- Updated minimum dependencies to Plone 4.0 (was 4.0a1),
  Products.AddRemoveWidget 1.4.4 (was 1.4.2) and