@@ -1,0 +1,12 @@
+BODY {
+    font-size: 0.9em;
+}
+
+H4 {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+DT {
+    font-weight: bold;
+}
